--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Play OvO Classic Unblocked Game | OvO Classic Github</title>
-    <meta name="description" content="Play OvO Classic Unblocked! Enjoy the timeless platformer with no restrictions. Jump, run, and tackle challenging levels in this exciting adventure. Play now!
-">
+<title>Play OvO Classic At School | OvO Classic</title>
+<meta name="description" content=" Play OvO Classic Unblocked ad-free! Enjoy this classic platformer without any restrictions. Jump, run, and take on exciting challenges in this adventure"/>
+
+<meta name="robots" content="index, follow, max-snippet:-1, max-image-preview: large, max-video-preview:-1" />
+<meta name="keywords" content=" OvO, OvO Unblocked, OvO Github Unblocked, OvO Classic, OvO Classic Unblocked, OvO Github, GitHub OvO>
+
+<meta name="author" content="OvO Classic Team"/>
+<link rel="canonical" href="https://ovo-github-unblocked.github.io/" />
+<meta name="publisher" content="OvO Classic Team">
     <meta name="google-site-verification" content="6X16UeNicX1h321DliCROhwuWyWFPlaV3CelXKq0iRk" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
