--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="keywords" content=" OvO, OvO Unblocked, OvO Github Unblocked, OvO Classic, OvO Classic Unblocked, OvO Github, GitHub OvO>
 
 <meta name="author" content="OvO Classic Team"/>
-<link rel="canonical" href="https://ovo-github-unblocked.github.io/" />
+<link rel="canonical" href="https://ovo-classic.github.io/" />
 <meta name="publisher" content="OvO Classic Team">
     <meta name="google-site-verification" content="6X16UeNicX1h321DliCROhwuWyWFPlaV3CelXKq0iRk" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
