--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>Play OvO Classic At School | OvO Classic</title>
+<title>Play Ads-free OvO Classic At School | OvO Classic</title>
 <meta name="description" content=" Play OvO Classic Unblocked ad-free! Enjoy this classic platformer without any restrictions. Jump, run, and take on exciting challenges in this adventure"/>
 
 <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview: large, max-video-preview:-1" />
