--- a/go/10-minutes-till-dawn.html
+++ b/go/10-minutes-till-dawn.html
@@ -149,7 +149,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/volley-random.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/volley-random.png">
+                            <img src="https://cigaedu22.github.io/img/volley-random.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -164,7 +164,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/riddle-school.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/riddle-school.png">
+                            <img src="https://cigaedu22.github.io/img/riddle-school.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -179,7 +179,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/city-car-driving-stunt-master.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/city-car-driving-stunt-master.png">
+                            <img src="https://cigaedu22.github.io/img/city-car-driving-stunt-master.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -194,7 +194,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/12-minibattles.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/12-minibattles.png">
+                            <img src="https://cigaedu22.github.io/img/12-minibattles.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -209,7 +209,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/car-rush.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/car-rush.png">
+                            <img src="https://cigaedu22.github.io/img/car-rush.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -224,7 +224,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/retro-bowl.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/retro-bowl.png">
+                            <img src="https://cigaedu22.github.io/img/retro-bowl.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -239,7 +239,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/vex-7.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/vex-7.png">
+                            <img src="https://cigaedu22.github.io/img/vex-7.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -254,7 +254,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/cat-trap.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/cat-trap.png">
+                            <img src="https://cigaedu22.github.io/img/cat-trap.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -269,7 +269,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/doge-miner.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/doge-miner.png">
+                            <img src="https://cigaedu22.github.io/img/doge-miner.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -284,7 +284,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/battle-wheels.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/battle-wheels.png">
+                            <img src="https://cigaedu22.github.io/img/battle-wheels.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -299,7 +299,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/raft-wars.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/raft-wars.png">
+                            <img src="https://cigaedu22.github.io/img/raft-wars.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -314,7 +314,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/rocket-soccer-derby.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/rocket-soccer-derby.png">
+                            <img src="https://cigaedu22.github.io/img/rocket-soccer-derby.png">
                             <div class="product-badge">       
                             </div>
                         </div>
