--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview: large, max-video-preview:-1" />
 <meta name="keywords" content=" OvO, OvO Unblocked, OvO Github Unblocked, OvO Classic, OvO Classic Unblocked, OvO Github, GitHub OvO>
 
-<meta name="author" content="OvO Classic Team"/>
 <link rel="canonical" href="https://ovo-classic.github.io/" />
+<meta name="author" content="OvO Classic">
 <meta name="publisher" content="OvO Classic Team">
+
     <meta name="google-site-verification" content="6X16UeNicX1h321DliCROhwuWyWFPlaV3CelXKq0iRk" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -843,7 +844,7 @@
                     </div>
                 <div style="padding-left: 350px;" class="col-md-6 col-12">
                         <div class="ltn__copyright-design clearfix">
-                            <p> Contact Us: infofreddielewis12@gmail.com</p>
+                            <p> Contact Us: abbasseoexpert119@gmail.com</p>
                         </div>            
                     </div>
 
