--- a/play.html
+++ b/play.html
@@ -3,13 +3,29 @@
 
 <head>
 
-    <meta name="robots" content="noindex, follow" />
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title> Play OvO Classic Game</title>
      <meta name="description" content="Play OvO Classic Game! Enjoy the timeless platformer with no restrictions. Jump, run, and tackle challenging levels in this exciting adventure. Play now!
 ">
+    <link rel="canonical" href="https://ovo-classic.github.io//play.html">
+<meta name="author" content="OvO Classic Team">
+<meta name="publisher" content="OvO Classic Team">
+
+<meta name="robots" content="index, follow, max-snippet:-1, max-image-preview: large, max-video-preview:-1" />
+<meta name="google-site-verification" content="6X16UeNicX1h321DliCROhwuWyWFPlaV3CelXKq0iRk" />
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KQBRF92VLS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KQBRF92VLS');
+</script>
+
    
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -680,9 +696,7 @@
     <!-- PRODUCT AREA END -->
 
 
-
-
-    <!-- FOOTER AREA START -->
+  <!-- FOOTER AREA START -->
     <footer class="ltn__footer-area  ">
         <div class="footer-top-area  section-bg-1 plr--5"> 
         </div>
@@ -694,7 +708,11 @@
                             <p>Ovo-classic.github.io @ <span class="current-year"></span></p>
                         </div>            
                     </div>
-                
+                <div style="padding-left: 350px;" class="col-md-6 col-12">
+                        <div class="ltn__copyright-design clearfix">
+                            <p> Contact Us: abbasseoexpert119@gmail.com</p>
+                        </div>            
+                    </div>
 
                     <!-- <div class="col-md-6 col-12 align-self-center">
                         <div class="ltn__copyright-menu text-right">
@@ -732,7 +750,6 @@
     <script src="/assets/js/plugins.js"></script>
     <!-- Main JS -->
     <script src="/assets/js/main.js"></script>
-
   
 </body>
 </html>
