--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>Play Ads-free OvO Classic At School | OvO Classic</title>
-<meta name="description" content=" Play OvO Classic Unblocked ad-free! Enjoy this classic platformer without any restrictions. Jump, run, and take on exciting challenges in this adventure"/>
+<title>Play OvO Classic At School | OvO Unblocked</title>
+<meta name="description" content=" Play OvO Classic Unblocked ad-free! Enjoy this classic platformer without any restrictions. Jump, run, and take on exciting challenges in OvO Unblocked!"/>
 
 <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview: large, max-video-preview:-1" />
 <meta name="keywords" content=" OvO, OvO Unblocked, OvO Github Unblocked, OvO Classic, OvO Classic Unblocked, OvO Github, GitHub OvO>
@@ -803,7 +803,7 @@
     <h2>What is OvO Classic?</h2>
     <p><a href="https://ovo-classic.github.io/">OvO Classic</a> is a fast-paced platformer in which the mandatory move in a given level is replaced by various puzzles that involve both the player’s brain and limbs. The game's premise is simple: to guide your character through different levels filled with different obstacles and dangers on each level. The major difference from a huge number of platformers is clear control, interesting level design, and a perfectly matched level of difficulty and the amount of fun.</p>
 
-    <h2>Features of OvO Classic Unblocked</h2>
+    <h2>Features of OvO Unblocked</h2>
     <ul>
         <li><strong>Unrestricted Access:</strong> The main benefit of using OvO Classic Unblocked is that one does not have to face any restrictions while playing the game. You do not need to stick in a particular environment; you can play the game whether you are at school or work and can get immersed into the game and continue playing.</li>
         <li><strong>Engaging Gameplay:</strong> Hence OvO presents fun, with elements of surprise and at the same time can be a challenge depending on the capacity of the players. The game is characterized by aspects that involve dynamics of hand and eye coordination as well as planning skills, thus it can be played by anybody, beginners included.</li>
@@ -812,7 +812,7 @@
         <li><strong>Fast-Paced Action:</strong> The game's fast-paced nature ensures that there's never a dull moment. The thrill of completing a level at lightning speed is immensely satisfying and keeps players coming back for more.</li>
     </ul>
 
-    <h2>Why Play OvO Classic Unblocked?</h2>
+    <h2>Why Play OvO Unblocked?</h2>
     <h3>Accessible Anytime, Anywhere</h3>
     <p>One of the primary reasons for the popularity of OvO Classic Unblocked is its accessibility. Students can play the game on their school Chromebooks during breaks, providing a much-needed mental break from studies. The unblocked version ensures that there are no barriers to enjoying the game, making it an excellent choice for quick gaming sessions.</p>
 
@@ -823,7 +823,7 @@
     <p>The need to point out that, apart from the obvious entertainment, OvO Classic Unblocked has many advantages for the development of cognitive functions. The game involves use of the brain muscles as one is forced to think, analyze, and plan on how to overcome the level that is set by the computer.</p>
 
     <h3>Community and Competitiveness</h3>
-    <p>OvO Classic Unblocked also contributes to the creation of a group identity of the people involved in the game. Getting the best scores by trying to beat the previous gamers and exchanging ideas with other players is another plus to the game. This social aspect promotes enjoyment and better interaction and makes the whole experience even more exciting.</p>
+    <p><a href="https://ovo-classic.github.io/">OvO Unblocked</a> also contributes to the creation of a group identity of the people involved in the game. Getting the best scores by trying to beat the previous gamers and exchanging ideas with other players is another plus to the game. This social aspect promotes enjoyment and better interaction and makes the whole experience even more exciting.</p>
 
     <h2>Conclusion</h2>
     <p><a href="https://ovo-classic.github.io/">OvO github</a> is not just a game but it is an awesome experience of fun, contest, and availability. Combined with the non-restrictive licenses, the game offers an ideal form of entertainment for the students, office clerks, or anyone who wants to have a brief but fully satisfying game session. Hi there, welcome to the wonderful virtual world of OvO Classic Unblocked; you’ll find out that it is one of the best platformer games out there. In the game OvO Classic Unblocked, you can try to avoid deadly obstacles or try to run through the levels as fast as possible.</p>
@@ -845,7 +845,7 @@
                     </div>
                 <div style="padding-left: 350px;" class="col-md-6 col-12">
                         <div class="ltn__copyright-design clearfix">
-                            <p> Contact Us: abbasseoexpert119@gmail.com</p>
+                            <p>abbasseoexpert119@gmail.com</p>
                         </div>            
                     </div>
 
